--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -8,15 +8,17 @@
         Title="MainWindow"
         Height="450"
         Width="450"
-        ContentRendered="Window_ContentRendered"
-        KeyDown="Window_KeyDown">
+        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        ContentRendered="Window_ContentRendered" KeyDown="Window_KeyDown">
     <Grid>
         <Border BorderBrush="Black"
                 BorderThickness="4"
                 Width="406"
                 Height="406">
             <Canvas Name="GameArea"
-                    ClipToBounds="True"/>
+                    ClipToBounds="True"
+                    Width="400"
+                    Height="400"/>
         </Border>
     </Grid>
 </Window>
